Replacing Arduino framework with esp-idf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,13 @@
-cmake_minimum_required(VERSION 3.16)
-
 set(COMPONENT_SRCS
     "src/rak3172.cpp"
-    "src/rak3172_p2p.cpp"
     "src/rak3172_lorawan.cpp"
-)
+    "src/rak3172_p2p.cpp"
+    )
 
 set(COMPONENT_ADD_INCLUDEDIRS
-    "include"
-)
+  include
+  )
 
-set(COMPONENT_REQUIRES src)
 set(COMPONENT_PRIV_REQUIRES freertos)
 
 register_component()
