Clean up code, working on RUI3 integration, update documentation and CHANGELOG

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,18 @@
 set(COMPONENT_SRCS
     "src/rak3172.cpp"
-    "src/rak3172_lorawan.cpp"
-    "src/rak3172_p2p.cpp"
+    "src/Commands/rak3172_commands.cpp"
+    "src/Commands/rak3172_commands_rui3.cpp"
+    "src/Protocols/LoRaWAN/rak3172_lorawan.cpp"
+    "src/Protocols/LoRaWAN/rak3172_lorawan_rui3.cpp"
+    "src/Protocols/P2P/rak3172_p2p.cpp"
+    "src/Protocols/P2P/rak3172_p2p_rui3.cpp"
     )
 
 set(COMPONENT_ADD_INCLUDEDIRS
 	"include"
+	"include/Protocols"
+	"include/Protocols/LoRaWAN"
+	"include/Protocols/P2P"
 	)
 
 set(COMPONENT_PRIV_REQUIRES freertos)
