Add 'RAK3172_PrepareSleep' to driver

--- a/Kconfig
+++ b/Kconfig
@@ -13,13 +13,13 @@ menu "RAK3172"
             Perform a factory reset during the device driver initialization.
 
     menu "Modes"
-        config RAK3172_WITH_LORAWAN
+        config RAK3172_PROT_WITH_LORAWAN
             bool "Include LoRaWAN"
             default y
             help
                 Enable this option if you want to use the LoRaWAN mode.
 
-        config RAK3172_WITH_P2P
+        config RAK3172_PROT_WITH_P2P
             bool "Include P2P"
             default n
             help
@@ -147,6 +147,15 @@ menu "RAK3172"
             default 1
             help
                 Core used by the UART receive task.
+    endmenu
+
+    menu "Misc"
+        config RAK3172_MISC_ERROR_BASE
+            hex "RAK3172 driver error base definition"
+            range 0 FFFF
+            default 0xA000
+            help
+                Set the error base for the driver.
     endmenu
 
 endmenu
