--- a/Kconfig
+++ b/Kconfig
@@ -7,6 +7,7 @@ menu "RAK3172"
 
     config RAK3172_FACTORY_RESET
         bool "Factory reset"
+        depends on RAK3172_USE_RUI3
         default y
         help
             Perform a factory reset during the device driver initialization.
