Fix typo in OR statement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ set(COMPONENT_ADD_INCLUDEDIRS
 
 set(COMPONENT_PRIV_REQUIRES freertos driver)
 
-if((IDF_TARGET STREQUAL "esp32") OR (IDF_TARGET STREQUAL "esp32c2") OR (IDF_TARGET STREQUAL "esp32c3") or (IDF_TARGET STREQUAL "esp32s2") or (IDF_TARGET STREQUAL "esp32s3"))
+if((IDF_TARGET STREQUAL "esp32") OR (IDF_TARGET STREQUAL "esp32c2") OR (IDF_TARGET STREQUAL "esp32c3") OR (IDF_TARGET STREQUAL "esp32s2") OR (IDF_TARGET STREQUAL "esp32s3"))
 	list(APPEND COMPONENT_PRIV_REQUIRES esp_timer)
 	list(APPEND COMPONENT_SRCS 	"src/Arch/Timer/rak3172_timer.cpp")
 	list(APPEND COMPONENT_SRCS 	"src/Arch/PwrMgmt/rak3172_pwrmgmt.cpp")
