--- a/idf_component.yml
+++ b/idf_component.yml
@@ -1,6 +1,6 @@
-version: "4.1.0"
+version: "4.2.0"
 description: RAK3172
-url: https://gitlab.server-kampert.de/esp32/libraries/rak3172
+url: https://github.com/Kampi/ESP32-RAK3172
 dependencies:
   idf:
     version: ">=4.0"
